<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Taxi Passenger</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="main_map_page_taxi_arriving">TAXI ARRIVING</string>
    <string name="incoming_taxi_cancel_button_text">ОТМЕНИТЬ ТАКСИ</string>
    <string name="main_map_page_search_location">Укажите адрес следования</string>
    <string name="main_map_page_cancel_upper">ОТМЕНА</string>
    <string name="main_map_page_startpoint">Откуда</string>
    <string name="select_points_search_start_point">Введите адрес стартого пукнта</string>
    <string name="main_map_page_endpoint">Куда</string>
    <string name="select_points_select_from_the_map">Или Укажите место на карте</string>
    <string name="select_points_search_end_point">Введите адрес конечного пункта</string>
    <string name="select">Выбрать</string>
    <string name="cancel_button_text">Отмена</string>
    <string name="select_points_current_position">Откуда</string>
    <string name="select_points_point_on_the_map">Куда</string>
    <string name="title_activity_test">Test</string>

    <string name="hello_world">Hello world!</string>

</resources>
